fix spacing

--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -1,36 +1,36 @@
 .modal-container h1:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
 .modal-container h2:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
 .modal-container h3:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
 .modal-container h4:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
 .modal-container h5:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
 .modal-container h6:first-child {
     text-align: center;
-    font-size: 32px;
+    font-size: 42px;
     margin-top: 0;
 }
 
@@ -44,7 +44,7 @@
         letter-spacing: -0.014em;
         line-height: 38px;
         margin-top: 1.01em;
-        font-size: 26px;
+        font-size: 24px;
         font-weight: bold;
         margin-bottom: -0.27em;
         color: #3b3c40;
@@ -68,10 +68,12 @@
         margin-top: 1.56em;
         margin-bottom: -0.46em;
         word-break: break-word;
+        font-size: 20px;
         color: #3b3c40;
 
         strong {
             font-weight: bold;
+            font-size: 20px;
             color: #3b3c40;
         }
 
@@ -96,6 +98,7 @@
         margin-left: -20px;
         padding-left: 23px;
         box-shadow: rgb(36, 36, 36) 3px 0px 0px 0px inset;
+        font-size: 20px;
         color: #3b3c40;
         font-style: italic;
 
@@ -130,12 +133,14 @@
         padding: 0;
         list-style: disc;
         margin-left: 30px;
+        font-size: 20px;
         list-style-image: none;
 
         li {
             margin-top: 1.72em;
             letter-spacing: 0;
             line-height: 24px;
+            font-size: 20px;
             margin-bottom: -0.31em;
             color: #3b3c40;
 
@@ -149,10 +154,12 @@
     ol {
         padding: 0;
         list-style: decimal;
+        font-size: 20px;
         list-style-image: none;
 
         li {
             margin-top: 0.94em;
+            font-size: 20px;
             letter-spacing: -0.003em;
             line-height: 32px;
             list-style-type: decimal;
@@ -171,21 +178,25 @@
 
 .modal-container p strong {
     font-weight: bold;
+    font-size: 20px;
     color: #3b3c40;
 }
 
 .modal-container p a {
     text-decoration: underline;
+    font-size: 20px;
     color: inherit;
 
     strong {
         font-weight: bold;
+        font-size: 20px;
         color: #3b3c40;
     }
 }
 
 .modal-container p a strong {
     font-weight: bold;
+    font-size: 20px;
     color: #3b3c40;
 }
 
@@ -206,5 +217,6 @@
 
 .modal-container blockquote p strong {
     font-weight: bold;
+    font-size: 20px;
     color: #3b3c40;
 }
